# workingdays-api

./: CONTRIBUTING.md  README.md  openapi.yaml
android/: README.md  build.gradle
android/src/main/java/com/apiverve/client/: APIClient.java
android/src/main/java/com/apiverve/workingdays/: APIClient.java  APIException.java  APIResponse.java
android/src/main/java/com/apiverve/workingdays/data/: ResponseModels.java
examples/: README.md
examples/csharp/: basic.cs
examples/java/: basic.java
examples/javascript/: basic.js  error-handling.js
examples/python/: basic.py
go/: README.md  client.go  go.mod  types.go
npm/: README.md  index.d.ts  index.js  package.json
npm/examples/: basic.js
nuget/: Readme.md  ResponseObj.cs  WorkingDaysAPIClient.cs  WorkingDaysAPIClient.csproj  WorkingDaysQueryOptions.cs
python/: README.md  pyproject.toml
python/src/apiverve_workingdays/: __init__.py  apiClient.py  setup.py  setup_dep.py
